fix pdf spacing

--- a/src/app/styles/print.css
+++ b/src/app/styles/print.css
@@ -22,6 +22,8 @@
   }
 
   body {
+    margin: 0 !important;
+    padding: 0 !important;
     background: white !important;
   }
 
